feat: Voiceqube Interview Proctor
- Complete AI-powered interview proctoring library
- Face detection, gaze tracking, head pose estimation
- Audio monitoring for talking/whispering detection
- Browser telemetry for tab switching, clipboard monitoring
- Pattern detection for suspicious behaviors
- InterviewProctor API with event-driven architecture
- Comprehensive session reports with risk assessment
- React demo app for testing

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -12,7 +12,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "types": ["react-types", "react-dom"],
+    "types": ["react", "react-dom"],
     "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
